Updated HTML Files

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
                             Charts
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="PlayerPosition1.html">Player Position</a>
-                            <a class="dropdown-item" href="PlayerPosition2.html">Player Position by Year</a>
-                            <a class="dropdown-item" href="CombineEvents.html">Combine Events</a>
+                            <a class="dropdown-item" href="PlayerPosition1.html">Draft Position Frequency</a>
+                            <a class="dropdown-item" href="PlayerPosition2.html">Draft Position Trend</a>
+                            <a class="dropdown-item" href="CombineEvents.html">Combine</a>
                         </div>
                     </li>
                 </ul>
@@ -67,15 +67,14 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="PlayerPosition1.html"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="player position">
-                            </a> 
+                            <a href="PlayerPosition1.html"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="PlayerPosition2.html"><img src="../static/images/player1.png" width="100%" alt="Player Position by Year"></a>
+                            <a href="PlayerPosition2.html"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
                         </div>
         
                         <div class="col-3 col-md-6">
-                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine Events"></a>
+                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
                         </div>
                     </div>
                 </div>
