--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Combine Events</title>
+    <title>Combine</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -28,9 +28,9 @@
                             Charts
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="PlayerPosition1.html">Player Position</a>
-                            <a class="dropdown-item" href="PlayerPosition2.html">Player Position by Year</a>
-                            <a class="dropdown-item" href="CombineEvents.html">Combine Events</a>
+                            <a class="dropdown-item" href="PlayerPosition1.html">Draft Position Frequency</a><h5>Draft Position Frequency</h5>
+                            <a class="dropdown-item" href="PlayerPosition2.html">Draft Position Trend</a><h5>Draft Position Trend</h5>
+                            <a class="dropdown-item" href="CombineEvents.html">Combine</a><h5>Combine</h5>
                         </div>
                     </li>
                 </ul>
@@ -42,10 +42,9 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="col-md-12">
-                    <h3>Combine Events</h3>
+                    <h3>Combine</h3>
                     <hr>
-                    
-                    <img src="../static/images/NFLCombine.png" width="100%" alt="Combine Events">
+                    <img src="../static/images/NFLCombine.png" width="100%" alt="Combine">
                     <br>
                     <p>Holder for Chart</p>
                 </div>
@@ -57,16 +56,16 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="PlayerPosition1.html"><img src="../static/images/NFLDraft2021.png" width="100%" alt="Player Position">
+                            <a href="PlayerPosition1.html"><img src="../static/images/NFLDraft2021.png" width="100%" alt="Draft Position Frequency">
                             </a>
                         </div>
                         
                         <div class="col-3 col-md-6">
-                            <a href="PlayerPosition2.html"><img class="pic" src="../static/images/player1.png" width="100%" alt="Player Position by Year"></a>
+                            <a href="PlayerPosition2.html"><img class="pic" src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a>
                         </div>
                     
                         <div class="col-3 col-md-6">
-                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%" alt="Combine Events"></a>
+                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%" alt="Combine"></a>
                         </div>
                     </div>
                 </div>
