--- a/templates/PlayerPosition2old.html
+++ b/templates/PlayerPosition2old.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Draft Position Frequency</title>
+    <title>Draft Position Trend</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 <body>
     <!--Navbar adjustments-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container content">
+        <div class="container">
             <a class="navbar-brand text-white" href="index.html">NFL Dashboard</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,53 +28,45 @@
                             Charts
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="PlayerPosition1.html">Draft Position Frequency</a>
-                            <a class="dropdown-item" href="PlayerPosition2.html">Draft Position Trend</a>
-                            <a class="dropdown-item" href="CombineEvents.html">Combine</a>
+                            <a class="dropdown-item" href="PlayerPosition1.html">Draft Position Frequency</a><h5>Draft Position Frequency</h5>
+                            <a class="dropdown-item" href="PlayerPosition2.html">Draft Position Trend</a><h5>Draft Position Trend</h5>
+                            <a class="dropdown-item" href="CombineEvents.html">Combine</a><h5>Combine</h5>
                         </div>
                     </li>
                 </ul>
             </div>
-        </div> 
+        </div>
     </nav>
-    <!--Player Position-->
-    <div class="container content">
-        <div class="row" id="draftfrequency">
-            <div class="col-md-8">
-                <div class="col-md-12">
-                    <h3>Draft Position Frequency</h3>
-                    <hr>
-                    <img src="../static/images/NFLDraft2021.png" width="100%" alt="Draft Position Frequency">
-                    <br>
-                    <p>Holder for the player position chart</p>
-                </div>
+    
+    <!--Add info in a container-->
+    <div class="container content bg-white">
+        <h3>Draft Position Trend</h3>
+        <hr>
+        <p>Holder for Player Position by Year chart</p>
+        <div class="row">
+            <div class="col-md-6">
+                <h3 class="text-center">Draft Position Frequency</h3>
+                <a href="PlayerPosition1.html"><img width="100%" src="../static/images/NFLDraft2021.png"></a>   
             </div>
-            <!--visualizations container edits-->
-            <div class="col-md-4">
-                <div class="col-md-12">
-                    <h3>Data Charts</h3>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3 col-md-6">
-                            <a href="PlayerPosition1.html"><img src="../static/images/NFLDraft2021.png" width="100%" alt="Draft Position Frequencey"></a><h5>Draft Position Frequency</h5>
-                        </div>
-                        
-                        <div class="col-3 col-md-6">
-                            <a href="PlayerPosition2.html"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
-                        </div>
-                    
-                        <div class="col-3 col-md-6">
-                            <a href="CombineEvents.html"><img class="pic" src="../static/images/NFLCombine.png" width="100%" alt="Combine"></a><h5>Combine</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>            
-        </div>    
+            <div class="col-md-6">
+                <h3 class="text-center">Draft Position Trend</h3>
+                <a href="PlayerPosition2.html"><img width="100%" src="../static/images/player1.png"></a>  
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <h3 class="text-center">Combine</h3>
+                <a href="CombineEvents.html"><img width="100%" src="../static/images/NFLCombine.png"></a>   
+            </div>
+        </div>   
     </div>
+    
     <!-- Footer -->
     <footer class="page-footer font-small footer-dark">
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
+    
 </body>
 </html>
