Put in D3 and JS scripts in html

--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -11,6 +11,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../static/css/style.css">
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
     <!--Navbar adjustments-->
@@ -76,5 +78,6 @@
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
+    <script src="../static/js/test.js"></script>
 </body>
 </html>
