--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <!--Navbar adjustments-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand text-white" href="index.html" >NFL Dashboard</a>
+            <a class="navbar-brand text-white" href="/" >NFL Dashboard</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,9 +31,9 @@
                             Charts
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="PlayerPosition1.html">Draft Position Frequency</a>
-                            <a class="dropdown-item" href="PlayerPosition2.html">Draft Position Trend</a>
-                            <a class="dropdown-item" href="CombineEvents.html">Combine</a>
+                            <a class="dropdown-item" href="/frequency">Draft Position Frequency</a>
+                            <a class="dropdown-item" href="/trend">Draft Position Trend</a>
+                            <a class="dropdown-item" href="/combine">Combine</a>
                         </div>
                     </li>
                 </ul>
@@ -69,14 +69,14 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="PlayerPosition1.html"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
+                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="PlayerPosition2.html"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
+                            <a href="/trend"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
                         </div>
         
                         <div class="col-3 col-md-6">
-                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
                         </div>
                     </div>
                 </div>
