connected all html pages together and modified git ignore

--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -54,18 +54,18 @@
 <!--visualization part of the page-->            
             <div class="col-md-4">
                 <div class="col-md-12">
-                    <h3>Charts</h3>
+                    <h3>Data Charts</h3>
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
+                            <a href="DraftPositionFrequency.html"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="/trend"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
+                            <a href="DraftPositionTrend.html"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
                         </div>
         
                         <div class="col-3 col-md-6">
-                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
                         </div>
                     </div>
                 </div>
