--- a/templates/DraftPositionFrequency.html
+++ b/templates/DraftPositionFrequency.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Draft Position Frequency</title>
+    <title>Draft Position Trend</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -41,12 +41,12 @@
     </nav>
     <!--Player Position-->
     <div class="container content">
-        <div class="row" id="draftfrequency">
+        <div class="row" id="drafttrend">
             <div class="col-md-8">
                 <div class="col-md-12">
                     <h3>Draft Position Frequency</h3>
                     <hr>
-                    <img src="../static/images/NFLDraft2021.png" width="100%" alt="Draft Position Frequency">
+                    <img src="../static/images/NFLDraft2021.png" width="100%" alt="Draft Position Trend">
                     <br>
                     <p>Holder for the player position chart</p>
                 </div>
@@ -58,14 +58,14 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
+                            <a href="DraftPositionFrequency.html"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="/trend"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
+                            <a href="DraftPositionTrend.html"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
                         </div>
         
                         <div class="col-3 col-md-6">
-                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
                         </div>
                     </div>
                 </div>
