--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                     <p> Have you ever wondered how the combine statistics influence the draft and how many players are drafted by position?  This application will allow you to view these statistics and understand how many players are drafted per year. </p> 
                     
                     <p> What do those 6 combine events mean? </p>
-                    <p> The Forty Yard Dash - the 40 yeard dash is is a test of speed to see how fast the player can run.  The record was set in 2017 by WR John Ross at 4.22 seconds. </p>
+                    <p> The Forty Yard Dash - the 40 yeard dash is a test of speed to see how fast the player can run.  The record was set in 2017 by WR John Ross at 4.22 seconds. </p>
                     <p> Vertical - the vertical is the verical jump.  There are a series of flags set at various heights. The player must jump to see how high they can go.  Record set in 2005 by DB Gerald Sensabaugh 46".</p>
                     <p> Bench Reps - players bench press a 225-pound barbell as many times as possible.  The record is 51 reps by DT Justin Ernest in 1999.</p>
                     <p> 3Cone - the 3Cone drill evaluates the agility, quickness and fluidity of movement by the player. It is 30 yards total.</p>
@@ -69,14 +69,14 @@
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
+                            <a href="DraftPositionFrequency.html"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="/trend"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
+                            <a href="DraftPositionTrend.html"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
                         </div>
         
                         <div class="col-3 col-md-6">
-                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                            <a href="CombineEvents.html"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
                         </div>
                     </div>
                 </div>
