--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -11,8 +11,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../static/css/style.css">
+    
+    
+    <!-- D3 -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- AnyChart -->
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>
 </head>
 <body>
     <!--Navbar adjustments-->
@@ -42,41 +48,78 @@
 
     <div class="container content">
         <div class="row">
+            <!--visualization part of the page-->
             <div class="col-md-8">
                 <div class="col-md-12">
                     <h3>Combine</h3>
                     <hr>
                     <img src="../static/images/NFLCombine.png" width="100%" alt="Combine">
                     <br>
-                    <p>Holder for Chart</p>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="well">
+                                <h5>Year</h5>
+                                <select id="selDatasetYears" onchange="optionChanged(this.value)">
+
+                                </select>
+
+                            </div>
+                            <div class="well">
+                                <h5>Event</h5>
+                                <select id="selDatasetEvent" onchange="optionChanged(this.value)">
+
+                                </select>
+
+                            </div>
+                            <div class="well">
+                                <h5>Metric</h5>
+                                <select id="selDatasetMetric" onchange="optionChanged(this.value)">
+
+                                </select>
+
+                            </div>
+                        </div>
+                        <div class="col-md-6" "jumbotron text-center">
+                            <div id="bar"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
-<!--visualization part of the page-->            
             <div class="col-md-4">
                 <div class="col-md-12">
                     <h3>Charts</h3>
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
+                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"
+                                    alt="Draft Position Frequency"></a>
+                            <h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="/trend"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
+                            <a href="/trend"><img src="../static/images/player1.png" width="100%"
+                                    alt="Draft Position Trend"></a>
+                            <h5>Draft Position Trend</h5>
                         </div>
-        
+
                         <div class="col-3 col-md-6">
-                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"
+                                    alt="Combine"></a>
+                            <h5>Combine</h5>
                         </div>
                     </div>
                 </div>
-            </div>            
-        </div>    
+            </div>
+        </div>
     </div>
+
     <!-- Footer -->
     <footer class="page-footer font-small footer-dark">
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
-    <script src="../static/js/test.js"></script>
+
+    <!-- <script src="../static/js/test.js"></script> -->
+    <script src="../static/js/playerLineChart.js"></script>
+    
 </body>
 </html>
