--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Draft Position Frequency</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -46,9 +47,23 @@
                 <div class="col-md-12">
                     <h3>Draft Position Frequency</h3>
                     <hr>
-                    <img src="../static/images/NFLDraft2021.png" width="100%" alt="Draft Position Frequency">
+                    <img src="../static/images/NFLDraft2021.png" width="30%" alt="Draft Position Frequency">
                     <br>
-                    <p>Holder for the player position chart</p>
+                    <div class="col-md-5">
+                        <div id="bar"></div>
+                    </div>
+                    <br>
+
+                    <div class="row">
+                        <div class="well">
+                            <h5>Select Year</h5>
+                            <select id="selDataset1" onchange="optionChanged(this.value)"></select>
+                        </div>
+                        <div class="well">
+                            <h5>Select Round</h5>
+                            <select id="selDataset2" onchange="optionChanged(this.value)"></select>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!--visualizations container edits-->
@@ -70,13 +85,17 @@
                     </div>
                 </div>
             </div>            
-        </div>    
+        </div>
     </div>
+
+
     <!-- Footer -->
     <footer class="page-footer font-small footer-dark">
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
-    <script src="../static/js/test.js"></script>
+    <script src="../static/js/DraftPositionFrequency.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
 </html>
