corrected HTML page Data Position Frequency and added bar grpach sceleton

--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -40,19 +40,20 @@
             </div>
         </div> 
     </nav>
+
+    
     <!--Player Position-->
     <div class="container content">
         <div class="row" id="draftfrequency">
             <div class="col-md-8">
                 <div class="col-md-12">
-                    <h3>Draft Position Frequency</h3>
+                    <h3>Draft Position Frequency         <img src="../static/images/NFLDraft2021.png" width="15%" alt="Draft Position Frequency"></h3>
                     <hr>
-                    <img src="../static/images/NFLDraft2021.png" width="30%" alt="Draft Position Frequency">
-                    <br>
-                    <div class="col-md-5">
+                    
+
+                    <div class="col-md-12">
                         <div id="bar"></div>
                     </div>
-                    <br>
 
                     <div class="row">
                         <div class="well">
@@ -64,8 +65,18 @@
                             <select id="selDataset2" onchange="optionChanged(this.value)"></select>
                         </div>
                     </div>
+                    <br>
+ 
                 </div>
+
+                
             </div>
+            
+            
+
+
+
+
             <!--visualizations container edits-->
             <div class="col-md-4">
                 <div class="col-md-12">
@@ -87,6 +98,8 @@
             </div>            
         </div>
     </div>
+
+    
 
 
     <!-- Footer -->
