--- a/templates/PlayerPosition2.html
+++ b/templates/PlayerPosition2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Draft Position Trend</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -39,18 +41,39 @@
             </div>
         </div> 
     </nav>
+
+    
     <!--Player Position-->
     <div class="container content">
-        <div class="row" id="drafttrend">
+        <div class="row" id="draftfrequency">
             <div class="col-md-8">
                 <div class="col-md-12">
-                    <h3>Draft Position Frequency</h3>
+                    <h3>Draft Position Trend              <img src="../static/images/player1.png" width="15%" alt="Draft Position Trend"></h3>
                     <hr>
-                    <img src="../static/images/player1.png" width="100%" alt="Draft Position Trend">
+                    
+
+                    <div class="col-md-12">
+                        <div id="line"></div>
+                    </div>
+
+                    <div class="row">
+                        <div class="well">
+                            <h5>Select Position</h5>
+                            <select id="selDataset1" onchange="optionChanged(this.value)"></select>
+                        </div>
+                    </div>
                     <br>
-                    <p>Holder for the player position chart</p>
+ 
                 </div>
+
+                
             </div>
+            
+            
+
+
+
+
             <!--visualizations container edits-->
             <div class="col-md-4">
                 <div class="col-md-12">
@@ -70,13 +93,19 @@
                     </div>
                 </div>
             </div>            
-        </div>    
+        </div>
     </div>
+
+    
+
+
     <!-- Footer -->
     <footer class="page-footer font-small footer-dark">
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
-    <script src="../static/js/test.js"></script>
+    <script src="../static/js/DraftPositionTrend.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
 </html>
