--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 a.navbar-brand{
     margin-left: 10px;
     padding: 10px;
-    background-color: rgb(81, 175, 160);
+    background-color: rgb(92, 90, 90);
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
 }
@@ -23,7 +23,7 @@ a.navbar-brand{
 
 /* header styling*/
 h3{
-    color: rgb(81, 175, 160);
+    color: rgb(92, 90, 90);
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 15px;
 }
@@ -37,7 +37,7 @@ h3{
 /* fontstyling for text*/
 p{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: small;
     padding:10px;
 }
 
