--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -13,18 +13,18 @@
     <link rel="stylesheet" href="../static/css/style.css">
     
     
-    <!-- D3 -->
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <!-- D3  -->
+    <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script>
     <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- AnyChart -->
-    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>
+    <!-- <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>  -->
 </head>
 <body>
     <!--Navbar adjustments-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand text-white" href="index.html">NFL Dashboard</a>
+            <a class="navbar-brand text-white" href="/">NFL Dashboard</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -60,7 +60,11 @@
                             <div class="well">
                                 <h5>Year</h5>
                                 <select id="selDatasetYears" onchange="optionChanged(this.value)">
-
+                                    <option value: "2016">2016</option>
+                                    <option value: "2017">2017</option>
+                                    <option value: "2018">2018</option>
+                                    <option value: "2019">2019</option>
+                                    <option value: "2020">2020</option>
                                 </select>
 
                             </div>
@@ -74,13 +78,14 @@
                             <div class="well">
                                 <h5>Metric</h5>
                                 <select id="selDatasetMetric" onchange="optionChanged(this.value)">
-
+                                    <option>Forty Yards</option>
+                                    
                                 </select>
 
                             </div>
                         </div>
-                        <div class="col-md-6" "jumbotron text-center">
-                            <div id="bar"></div>
+                        <div id="container" class="col-md-6">
+                            
                         </div>
                     </div>
                 </div>
@@ -111,15 +116,21 @@
             </div>
         </div>
     </div>
-
+    <!-- <script src="../static/js/test.js"></script> -->
+    <script src="../static/js/combineChart.js"></script>
+    <!-- D3 -->
+    <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
+    <!-- Plotly -->
+    <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+    <!-- AnyChart -->
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js"></script>
+    
+    
+    
     <!-- Footer -->
     <footer class="page-footer font-small footer-dark">
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
-
-    <!-- <script src="../static/js/test.js"></script> -->
-    <script src="../static/js/playerLineChart.js"></script>
-    
 </body>
 </html>
