js Chart generator function

--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -54,16 +54,13 @@
                     <div class="col-md-12">
                         <div id="bar"></div>
                     </div>
-
+                    <div class='row'></div>
                     <div class="row">
                         <div class="well">
                             <h5>Select Year</h5>
                             <select id="selDataset1" onchange="optionChanged(this.value)"></select>
                         </div>
-                        <div class="well">
-                            <h5>Select Round</h5>
-                            <select id="selDataset2" onchange="optionChanged(this.value)"></select>
-                        </div>
+                        
                     </div>
                     <br>
  
