--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -51,9 +51,9 @@
             <!--visualization part of the page-->
             <div class="col-md-8">
                 <div class="col-md-12">
-                    <h3>Combine</h3>
+                    <h3>Combine    <img src="../static/images/NFLCombine.png" width="15%" alt="Combine">  </h3>
                     <hr>
-                    <img src="../static/images/NFLCombine.png" width="100%" alt="Combine">
+                    
                     <br>
                     <div class="row">
                         <div class="col-md-2">
