--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -53,7 +53,9 @@
                 <div class="col-md-12">
                     <h3>Combine    <img src="../static/images/NFLCombine.png" width="15%" alt="Combine">  </h3>
                     <hr>
-                    
+                        <div id="container" class="col-md-6">
+                            
+                        </div>
                     <br>
                     <div class="row">
                         <div class="col-md-2">
@@ -71,22 +73,28 @@
                             <div class="well">
                                 <h5>Event</h5>
                                 <select id="selDatasetEvent" onchange="optionChanged(this.value)">
-
+                                    <option>Forty_Yard</option>
+                                    <option>Vertical</option>
+                                    <option>Bench</option>
+                                    <option>Three_Cone</option>
+                                    <option>Broad_Jump</option>
+                                    <option>Shuttle</option>
                                 </select>
 
                             </div>
                             <div class="well">
                                 <h5>Metric</h5>
                                 <select id="selDatasetMetric" onchange="optionChanged(this.value)">
-                                    <option>Forty Yards</option>
+                                <option>Min</option>
+                                <option>Avg</option>
+                                <option>Max</option>
+
                                     
                                 </select>
 
                             </div>
                         </div>
-                        <div id="container" class="col-md-6">
-                            
-                        </div>
+
                     </div>
                 </div>
             </div>
