--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -53,7 +53,7 @@
                 <div class="col-md-12">
                     <h3>Combine    <img src="../static/images/NFLCombine.png" width="15%" alt="Combine">  </h3>
                     <hr>
-                        <div id="container" class="col-md-6">
+                        <div id="container" class="col-md-12 short">
                             
                         </div>
                     <br>
