--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 a.navbar-brand{
     margin-left: 10px;
     padding: 10px;
-    background-color: rgb(92, 90, 90);
+    background-color:rgb(163, 160, 160);
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
 }
@@ -46,10 +46,10 @@ p{
 
 /* body background*/
 body{
-    background-color: rgb(223, 222, 222);
+    background-color: blue;
 }
 .col-md-12{
-    background-color: white;
+    background-color: rgb(163, 160, 160);
     padding-top: 20px;
     padding-bottom:40px;
 }
