--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -19,7 +19,7 @@
     <!--Navbar adjustments-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container content">
-            <a class="navbar-brand text-white" href="/">NFL Dashboard</a>
+            <a class="navbar-brand text-white" href="/">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
