Combine Position Radar Chart

--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -34,6 +34,7 @@
                             <a class="dropdown-item" href="/frequency">Draft Position Frequency</a>
                             <a class="dropdown-item" href="/trend">Draft Position Trend</a>
                             <a class="dropdown-item" href="/combine">Combine</a>
+                            <a class="dropdown-item" href="/combinePosition">Combine by Position</a>
                         </div>
                     </li>
                 </ul>
@@ -89,6 +90,10 @@
         
                         <div class="col-3 col-md-6">
                             <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                        </div>
+                        <div class="col-3 col-md-6">
+                            <a href="/combinePosition"><img src="../static/images/NFLCombine.png" width="100%"  
+                            alt="Combine"></a><h5>Combine by Position</h5>
                         </div>
                     </div>
                 </div>
