--- a/templates/CombineEvents.html
+++ b/templates/CombineEvents.html
@@ -39,6 +39,7 @@
                             <a class="dropdown-item" href="/frequency">Draft Position Frequency</a>
                             <a class="dropdown-item" href="/trend">Draft Position Trend</a>
                             <a class="dropdown-item" href="/combine">Combine</a>
+                            <a class="dropdown-item" href="/combinePosition">Combine by Position</a>
                         </div>
                     </li>
                 </ul>
@@ -119,6 +120,10 @@
                                     alt="Combine"></a>
                             <h5>Combine</h5>
                         </div>
+                        <div class="col-3 col-md-6">
+                            <a href="/combinePosition"><img src="../static/images/NFLCombine.png" width="100%"  
+                            alt="Combine"></a><h5>Combine by Position</h5>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -126,11 +131,7 @@
     </div>
     <!-- <script src="../static/js/test.js"></script> -->
     <script src="../static/js/combineChart.js"></script>
-    <!-- D3 -->
-    <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
-    <!-- Plotly -->
-    <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
-    <!-- AnyChart -->
+    
     <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js"></script>
     
     
