--- a/templates/CombinePosition.html
+++ b/templates/CombinePosition.html
@@ -1,26 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Draft Position Trend</title>
+    <title>Combine</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../static/css/style.css">
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <link rel="stylesheet" href="../static/css/combineStyle.css">
+    
+    
+    <!-- D3  -->
+    <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script>
+    <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- AnyChart -->
+    <!-- <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>  -->
+    <!-- AnyChart -->
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-radar.min.js"></script>
 </head>
 <body>
     <!--Navbar adjustments-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container content">
-            <a class="navbar-brand text-white" href="/">Home</a>
+        <div class="container">
+            <a class="navbar-brand text-white" href="/">NFL Dashboard</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,56 +49,52 @@
                     </li>
                 </ul>
             </div>
-        </div> 
+        </div>
     </nav>
 
-    
-    <!--Player Position-->
     <div class="container content">
-        <div class="row" id="draftfrequency">
+        <div class="row">
+            <!--visualization part of the page-->
             <div class="col-md-8">
                 <div class="col-md-12">
-                    <h3>Draft Position Trend              <img src="../static/images/player1.png" width="15%" alt="Draft Position Trend"></h3>
+                    <h3>Combine by Position    <img src="../static/images/NFLCombine.png" width="15%" alt="Combine">  </h3>
                     <hr>
-                    
-
-                    <div class="col-md-12">
-                        <div id="line"></div>
-                    </div>
-
-                    <div class="row">
-                        <div class="well">
-                            <h5>Select Position</h5>
-                            <select id="selDataset1" onchange="optionChanged(this.value)"></select>
-                        </div>
-                    </div>
+                    <div id="chart" style="width: 500px; height: 400px;"></div>
+                        
                     <br>
- 
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="well">
+                                <h5>Select Year</h5>
+                                <select id="selDatasetYears" onchange="optionChanged(this.value)"></select>
+                                <h5>Select Position</h5>
+                                <select id="selDataset1" onchange="optionChanged(this.value)"></select>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-
-                
             </div>
-            
-            
-
-
-
-
-            <!--visualizations container edits-->
             <div class="col-md-4">
                 <div class="col-md-12">
-                    <h3>Data Charts</h3>
+                    <h3>Charts</h3>
                     <hr>
                     <div class="row">
                         <div class="col-3 col-md-6">
-                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"  alt="Draft Position Frequency"></a><h5>Draft Position Frequency</h5>
+                            <a href="/frequency"><img src="../static/images/NFLDraft2021.png" width="100%"
+                                    alt="Draft Position Frequency"></a>
+                            <h5>Draft Position Frequency</h5>
                         </div>
                         <div class="col-3 col-md-6">
-                            <a href="/trend"><img src="../static/images/player1.png" width="100%" alt="Draft Position Trend"></a><h5>Draft Position Trend</h5>
+                            <a href="/trend"><img src="../static/images/player1.png" width="100%"
+                                    alt="Draft Position Trend"></a>
+                            <h5>Draft Position Trend</h5>
                         </div>
-        
+
                         <div class="col-3 col-md-6">
-                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"  alt="Combine"></a><h5>Combine</h5>
+                            <a href="/combine"><img src="../static/images/NFLCombine.png" width="100%"
+                                    alt="Combine"></a>
+                            <h5>Combine</h5>
                         </div>
                         <div class="col-3 col-md-6">
                             <a href="/combinePosition"><img src="../static/images/NFLCombine.png" width="100%"  
@@ -97,20 +102,23 @@
                         </div>
                     </div>
                 </div>
-            </div>            
+            </div>
         </div>
     </div>
-
+    <!-- <script src="../static/js/test.js"></script> -->
+    <script src="../static/js/combinePosition.js"></script>
+    <!-- D3 -->
+    <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
+    <!-- Plotly -->
+    <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
     
-
-
+    
+    
+    
     <!-- Footer -->
     <footer class="page-footer font-small footer-dark">
         <div class="footer-copyright text-center py-3">
         </div>      
     </footer>
-    <script src="../static/js/DraftPositionTrend.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
 </html>
