added table to frequency page

--- a/templates/PlayerPosition1.html
+++ b/templates/PlayerPosition1.html
@@ -61,7 +61,105 @@
                             <h5>Select Year</h5>
                             <select id="selDataset1" onchange="optionChanged(this.value)"></select>
                         </div>
-                        
+                    <div class="col-md-10">
+          <div id="table-area" class="">
+            <table id="ufo-table" class="table table-striped">
+              <thead>
+                <tr>
+                  <th class="table-head">Positon Code</th>
+                  <th class="table-head">Position Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                    <td>TE</td>
+                    <td>Tight End</td>
+                </tr>
+                <tr>
+                    <td>K</td>
+                    <td>Kicker</td>
+                </tr>
+                <tr>
+                    <td>CB</td>
+                    <td>Cornerback</td>
+                </tr>
+                <tr>
+                    <td>OT</td>
+                    <td>Offensive Tackle</td>
+                </tr>
+                <tr>
+                    <td>QB</td>
+                    <td>Quarterback</td>
+                </tr>
+                <tr>
+                    <td>WR</td>
+                    <td>Wide Receiver</td>
+                </tr>
+                <tr>
+                    <td>S</td>
+                    <td>Safety</td>
+                </tr>
+                <tr>
+                    <td>DT</td>
+                    <td>Defensive Tackle</td>
+                </tr>
+                <tr>
+                    <td>DE</td>
+                    <td>Defensive End</td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td>Center</td>
+                </tr>
+                <tr>
+                    <td>OLB</td>
+                    <td>Outside Linebacker</td>
+                </tr>
+                <tr>
+                    <td>RB</td>
+                    <td>Running Back </td>
+                </tr>
+                <tr>
+                    <td>ILB</td>
+                    <td>Inside Linebacker</td>
+                </tr>
+                <tr>
+                    <td>P</td>
+                    <td>Punter</td>
+                </tr>
+                <tr>
+                    <td>OG</td>
+                    <td>Offensive Guard</td>
+                </tr>
+                <tr>
+                    <td>FB</td>
+                    <td>Fullback</td>
+                </tr>
+                <tr>
+                    <td>LS</td>
+                    <td>Long Snapper</td>
+                </tr>
+                <tr>
+                    <td>EDGE</td>
+                    <td>Edge Rusher</td>
+                </tr>
+                <tr>
+                    <td>LB</td>
+                    <td>Linebackers</td>
+                </tr>
+                <tr>
+                    <td>OL</td>
+                    <td>Offensive Linemen</td>
+                </tr>
+                <tr>
+                    <td>DL</td>
+                    <td>Defensive Linemen</td>
+                </tr>
+
+              </tbody>
+            </table>
+          </div>
+        </div>    
                     </div>
                     <br>
  
